[package]
name = "city_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.9"
worley-particle = { git = "https://github.com/TadaTeruki/worley-particle", features = ["particlemap"] }
vislayers = { git = "https://github.com/TadaTeruki/vislayers" }
drainage-basin-builder = { git = "https://github.com/TadaTeruki/drainage-basin-builder" }