[package]
name = "environment_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
libnoise = "1.1.2"
worley-particle = { git = "https://github.com/TadaTeruki/worley-particle", features = ["particlemap"] }

[dev-dependencies]
gtk4 = "0.9"
vislayers = { git = "https://github.com/TadaTeruki/vislayers" }
simplecolormap = { git = "https://github.com/TadaTeruki/simplecolormap" }
